--- a/api/website/style.css
+++ b/api/website/style.css
@@ -6,9 +6,9 @@
     "back save . . servername servername servername servername . . . logout"
     ". . base-filter base-filter logchannel logchannel agp agp filter filter. ."
     ". . base-filter base-filter logchannel logchannel agp agp filter filter . ."
-    ". . punish punish censor censor popmsg popmsg resend resend . ."
-    ". . punish punish censor censor popmsg popmsg channels channels . ."
-    ". . . . role role uncensor uncensor . . . ."
+    ". . punish punish censor censor popmsg popmsg role role . ."
+    ". . punish punish censor censor popmsg popmsg uncensor uncensor . ."
+    ". . . resend resend channels channels multi multi . . ."
     ". . . . . . . . . . . .";
   text-align: center;
   grid-gap: 1rem;
@@ -282,7 +282,8 @@ select {
       ". role role role ."
       ". uncensor uncensor uncensor ."
       ". resend resend resend ."
-      ". channels channels channels . ";
+      ". channels channels channels . "
+      ". multi multi multi .";
   }
   #save {
     height: 2%;
